2003-04-18 garlick
    * Get rid of "onstring" and "offstring" and add optional on="regex"
      off="regex" parameters to setstatus stmt.
    * Beginnings of phantom device support.

2003-04-17 garlick
    * Implement "foreachnode" and "foreachplug" constructs which will execute
      an inner block of statements N times, where N is the number of configured
      nodes on this device, or the number of plugs respectively.  In the
      inner block, "%s" will iterate through the list of plugs (or plugs
      corresponding to configured nodes).

2003-04-16 garlick
    * Further cleanup of parse.y.  Remove ordering dependency of device
      config directives.  Specify device name in front of spec open brace
      instead of "name" line.  Plug names are now handled as single directive
      with a list of strings rather than individual plug name directives.
      Make device types known to the scanner and remove quotes around them.
      Move all "spec" handling to parse.y.  Do away with maxplugcount directive.

2003-04-15 garlick
    * Cleanup of parse.y to prepare for nested blocks of script code.
    * Add 'foreachplug' and 'foreachnode' script constructs to allow repeated
      execution of a subblock of statements.  The number of iterations is
      the number of plugs configured or the number of nodes. (not yet tested)

2003-04-14 garlick
    * Renamed "plugcount" to "maxplugcount" in device configurations.
    * Renamed "map" to "setstatus" in device configurations.
    * Moved regex subexpression match buffer to the device structure.  There
      will be a persistant copy per device so $N can reference the most recent
      expect results from a seperate statement.
    * Make "setstatus" its own statement and change to work as follows -
      "setstatus [plugname] status", where status is a regex match, and name
      can be a regex match or a literal plug name in quotes.  If omitted,
      the plug name defaults to the current target.