@@ -1,6 +1,6 @@
 #
-# wti-rps10.dev,v 1.6 2003/01/17 23:50:34 garlick Exp
-# /chaos/cvs/powerman/etc/wti-rps10.dev,v
+# $Id$
+# $Source$
 #
 specification  "phantom" {
 	type 		SERIAL
@@ -17,9 +17,23 @@ specification  "phantom" {
 		expect "(0|1)\r"
 		setstatus "1" $1 on="1" off="0"
 	}
-	script toggle {
-		send "PT\r\n"
-		expect "ok\r"
+	script on {
+		send "P?\r\n"
+		expect "(0|1)\r"
+		setstatus "1" $1 on="1" off="0"
+		ifoff "1" {
+			send "PT\r\n"
+			expect "ok\r"
+		}
+	}		
+	script off {
+		send "P?\r\n"
+		expect "(0|1)\r"
+		setstatus "1" $1 on="1" off="0"
+		ifon "1" {
+			send "PT\r\n"
+			expect "ok\r"
+		}
 	}		
 	script beacon_on {
 		send "L1\r\n"	# LED on
