@@ -1,3 +1,6 @@
+2003-04-21 garlick  
+    * Add "ifon" and "ifoff" conditionals.
+
 2003-04-18 garlick
     * Get rid of "onstring" and "offstring" and add optional on="regex"
       off="regex" parameters to setstatus stmt.
